--- a/src/assets/scss/layout/_skill.scss
+++ b/src/assets/scss/layout/_skill.scss
@@ -17,77 +17,6 @@
 .wrapper {
   width: 100%;
 }
-.skill-item {
-  margin-bottom: $font4*8;
-  position: relative;
-  overflow-x:hidden;
-
-  p {
-    font-size: $font4*4;
-    font-weight: 500;
-    color: lighten($dark-grey, 5%);
-    margin: 0;
-  }
-  &-bar {
-    width: 100%;
-    height: 5px;
-    background: lighten($dark-grey, 5%);
-    display: block;
-    position: relative;
-    border-radius: $font4*3;
-
-    span {
-      position: absolute;
-      top: -30px;
-      padding: 0;
-      font-size: $font4*4;
-      padding: 3px 0;
-      font-weight: 500;
-      right: 0;
-    }
-  }
-  
-  &::before{
-    width: 100%;
-    height: $font4;
-    content: "";
-    display: block;
-    position: absolute;
-    background: lighten($light-grey, 20%);
-    bottom: 0;
-    border-radius: $font4*3;
-    overflow: hidden;
-  }
-
-  &-count* {
-    right: 0;
-  }
-
-  &-95 {
-    width: 95%;
-  }
-  &-90 {
-    width: 90%;
-  }
-  &-80 {
-    width: 80%;
-  }
-  &-85 {
-    width: 85%;
-  }
-  &-75 {
-    width: 75%;
-  }
-  &-40 {
-    width: 40%;
-  }
-  &-5 {
-    width: 5%;
-  }
-  &-25 {
-    width: 25%;
-  }
-}
 
 .skill {
   > .container {
@@ -103,7 +32,35 @@
     border-radius: $font4*2;
     -webkit-transition: all .5s;
     transition: all .5s;
-    padding: $font4*10;
+    margin-bottom: $font4*8;
+    position: relative;
+    overflow-x:hidden;
+    padding: $font4*10 $font4*5 0 $font4*5;
+
+    p {
+      font-size: $font4*4;
+      font-weight: 500;
+      color: lighten($dark-grey, 5%);
+      margin: 0;
+    }
+    &-bar {
+      width: 100%;
+      height: 5px;
+      background: lighten($dark-grey, 5%);
+      display: block;
+      position: relative;
+      border-radius: $font4*3;
+
+      span {
+        position: absolute;
+        top: -30px;
+        padding: 0;
+        font-size: $font4*4;
+        padding: 3px 0;
+        font-weight: 500;
+        right: 0;
+      }
+    }
     
     @include pad-width() {
       padding: $font4*5;
@@ -131,6 +88,35 @@
         color: $white;
       }
     }
+  }
+  
+  &-count* {
+    right: 0;
+  }
+
+  &-95 {
+    width: 95%;
+  }
+  &-90 {
+    width: 90%;
+  }
+  &-80 {
+    width: 80%;
+  }
+  &-85 {
+    width: 85%;
+  }
+  &-75 {
+    width: 75%;
+  }
+  &-40 {
+    width: 40%;
+  }
+  &-5 {
+    width: 5%;
+  }
+  &-25 {
+    width: 25%;
   }
 }
 .line {
