--- a/src/assets/scss/layout/_work.scss
+++ b/src/assets/scss/layout/_work.scss
@@ -20,8 +20,49 @@
         color: lighten($dark-grey, 15%);
       }
       li {
+        overflow: hidden;
+        text-align: left;
+
+        .description {
+          position: absolute;
+          background-color: rgba(0,0,0,0.6);
+          width: 100%;
+          height: 100%;
+          top: 100%;
+          left: 0;
+          -webkit-transition: all .4s ease-in-out;
+          -moz-transition: all .4s ease-in-out;
+          -o-transition: all .4s ease-in-out;
+          transition: all .4s ease-in-out;
+          color: $white;
+          padding: $font4*6;
+          text-align: left;
+
+          @include phone-width() {
+            height: auto;
+            position: relative;
+            padding: $font4*2 0;
+            border-top: 1px solid lighten($light-grey, 20%);
+            background-color: transparent;
+            color: $dark-grey;
+            top: 0;
+          }
+
+          .ul-list {
+            padding: 0;
+
+            li {
+              &:hover {
+                box-shadow: none;
+              }
+            }
+          }
+        }
         &:hover {
-          box-shadow: 0px -1px $font4*2 rgba(0,0,0,0.2);
+          box-shadow: 0px -1px $font4*2 rgba(0,0,0,0.5);
+          .description {
+            top: 0;
+          }
         }
       }
     }
